Přidání možnosti definovat výchozí kvalitu obrázku, který se vykresluje přes webp makro.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -8,26 +8,26 @@
 
 <div>JPG</div>
 <picture n:webp>
-    <img n:picture-src="$imageJpg, '100;100;exact'" alt="Image" />
+    <img n:picture-src="$imageJpg, '300;300;fit'" alt="Image" />
 </picture>
 
 <div>PNG</div>
 <picture n:webp>
-    <img n:picture-src="$imagePng, '100;100;exact'" alt="Image" />
+    <img n:picture-src="$imagePng, '300;300;fit'" alt="Image" />
 </picture>
 
 <div>GIF</div>
 <picture n:webp>
-    <img n:picture-src="$imageGif, '100;100;exact'" alt="Image" />
+    <img n:picture-src="$imageGif, '300;300;fit'" alt="Image" />
 </picture>
 
 <div>WebP</div>
 <picture n:webp>
-    <img n:picture-src="$imageWebp, '100;100;exact'" alt="Image" />
+    <img n:picture-src="$imageWebp, '300;300;fit'" alt="Image" />
 </picture>
 
 <div>Converted to WebP</div>
 <picture n:webp>
-    <img n:picture-src="$imageJpg, '100;100;exact&WebP'" alt="Image" />
+    <img n:picture-src="$imageJpg, '300;300;fit'" alt="Image" />
 </picture>
 
