Přidání možnosti přetížit výchozí qualitu webP obrázků v makru n:webP.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -31,3 +31,17 @@
     <img n:picture-src="$imageJpg, '300;300;fit'" alt="Image" />
 </picture>
 
+<div>JPG - Custom WebP quality (1–100)</div>
+<picture n:webp="10">
+    <img n:picture-src="$imageJpg, '300;300;fit'" alt="Image" />
+</picture>
+
+<div>WebP - Custom WebP quality (1–100)</div>
+<picture n:webp="10">
+    <img n:picture-src="$imageWebp, '300;300;fit'" alt="Image" />
+</picture>
+
+<div>Converted to WebP - Custom WebP quality (1–100)</div>
+<picture n:webp="10">
+    <img n:picture-src="$imageJpg, '300;300;fit'" alt="Image" />
+</picture>
