Přidání markra n:palette-src.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -46,3 +46,6 @@
 <picture n:webp="10">
     <img n:picture-src="$imageJpg, '300;300;fit&WebP'" alt="Image" />
 </picture>
+
+<div>Standalone image</div>
+<img n:palette-src="$imageJpg, '300;300;fit&Grayscale'" alt="Image" />
