Omezení použití Palette maker pouze na povolené tagy. Přidání možnosti používat makro palette-src in na tagu img a source.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -47,5 +47,11 @@
     <img n:picture-src="$imageJpg, '300;300;fit&WebP'" alt="Image" />
 </picture>
 
+<div>Custom srcset</div>
+<picture>
+    <source n:palette-src="$imageJpg, '300;300;fit&Grayscale&WebP'" type="image/webP">
+    <img n:palette-src="$imageJpg, '300;300;fit'" alt="Image" />
+</picture>
+
 <div>Standalone image</div>
 <img n:palette-src="$imageJpg, '300;300;fit&Grayscale'" alt="Image" />
