Method LatteHelpers::getPictureMimeType using getimagesize. Fix: image converted to WebP mimeType resolution.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -49,7 +49,7 @@
 
 <div>Custom srcset</div>
 <picture>
-    <source n:palette-src="$imageJpg, '300;300;fit&Grayscale&WebP'" type="image/webP">
+    <source n:palette-src="$imageJpg, '300;300;fit&Grayscale&WebP'" type="image/webp">
     <img n:palette-src="$imageJpg, '300;300;fit'" alt="Image" />
 </picture>
 
