New: Added support for named default images.

--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -59,3 +59,8 @@
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;jpg'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;png'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;gif'" alt="Image" />
+
+<div>Default images</div>
+<img n:palette-src="nonExistentImage, '300;300;fit&Grayscale'" alt="Image" />
+<img n:palette-src="nonExistentImage, '300;300;fit&Grayscale&FallbackImg;default1'" alt="Image" />
+<img n:palette-src="nonExistentImage, '300;300;fit&Grayscale&FallbackImg;default3'" alt="Image" />
