--- a/demo/app/presenters/templates/Palette/default.latte
+++ b/demo/app/presenters/templates/Palette/default.latte
@@ -56,6 +56,7 @@
 <div>Standalone image</div>
 <img n:palette-src="$imageJpg, '300;300;fit&Grayscale'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale'" alt="Image" />
+<img n:palette-src="$imageJpg, '300;300;exact&Grayscale'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;jpg'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;png'" alt="Image" />
 <img n:palette-src="$imageWebp, '300;300;fit&Grayscale&SaveAs;gif'" alt="Image" />
